--- a/html.html
+++ b/html.html
@@ -9,6 +9,24 @@
 </head>
 
 <body>
-
+  <header id="main-header">
+    <h1>Css custom properties</h1>
+  </header>
+  <div class="container">
+    <div class="grid">
+      <div class="box">
+        <h2>Hello word</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis id incidunt
+          labore minus mollitia praesentium quia! Ad, beatae distinctio est facere, iure
+          nam nobis odit reprehenderit saepe sit suscipit, velit.</p>
+      </div>
+      <div class="box">
+        <h2>Hello word</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis id incidunt
+          labore minus mollitia praesentium quia! Ad, beatae distinctio est facere, iure
+          nam nobis odit reprehenderit saepe sit suscipit, velit.</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
