--- a/html.html
+++ b/html.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-  <header id="main-header">
+  <header id="main-header" data-selector="main-header">
     <h1>Css custom properties</h1>
   </header>
   <div class="container">
     <div class="grid">
-      <div class="box">
+      <div class="box" data-selector="box">
         <h2>Hello word</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis id incidunt
           labore minus mollitia praesentium quia! Ad, beatae distinctio est facere, iure
@@ -28,5 +28,6 @@
       </div>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
