--- a/example1/html.html
+++ b/example1/html.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-language" content="ru">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Title</title>
+  <title>Example 1</title>
   <link rel="stylesheet" href="css.css">
 </head>
 
