--- a/example2/html.html
+++ b/example2/html.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <h1>Site Title</h1>
     <button class="button" type="button">Header Button</button>
     <button class="button" type="button">Header Button</button>
