полифиллы для ие11

--- a/example3/html.html
+++ b/example3/html.html
@@ -50,6 +50,13 @@
   }
   </style>
   <link rel="stylesheet" href="css.css">
+  <!--ie11CustomProperties-->
+  <script>window.MSInputMethodContext && document.documentMode && document.write('<script src="yourJsPath/ie11CustomProperties.js"><\x2fscript>');</script>
+  <!--css-vars-ponyfill-->
+  <script src="https://cdn.jsdelivr.net/npm/css-vars-ponyfill@2"></script>
+  <script>
+  cssVars();
+  </script>
 </head>
 
 <body>
