--- a/example1/html.html
+++ b/example1/html.html
@@ -5,7 +5,10 @@
   <meta http-equiv="Content-language" content="ru">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Example 1</title>
-  <link rel="stylesheet" href="css.css">
+  <!--<link rel="stylesheet" href="css.css">-->
+  <!--<link rel="stylesheet" href="less.css">-->
+  <!--<link rel="stylesheet" href="postcss.css">-->
+  <link rel="stylesheet" href="scss.css">
   <!--ie11CustomProperties-->
   <script>window.MSInputMethodContext && document.documentMode && document.write('<script src="yourJsPath/ie11CustomProperties.js"><\x2fscript>');</script>
   <!--css-vars-ponyfill-->
